# revw

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: release.yml
assets/: revw.json  revw.md  revw.tape
src/: app.rs  content_ops.rs  input.rs  json_ops.rs  lib.rs  main.rs  markdown_ops.rs  navigation.rs  overlay_context.rs  rendering.rs  syntax_highlight.rs  toon_ops.rs  ui.rs
src/app/: clipboard.rs  command.rs  completion.rs  core.rs  edit.rs  explorer.rs  explorer_ops.rs  file.rs  help.rs  history.rs  markdown.rs  mod.rs  navigation.rs  outline.rs  pdf.rs  search.rs  substitute.rs  token.rs  toon.rs  undo.rs
src/app/clipboard/: delete.rs  duplicate.rs  helpers.rs  mod.rs
src/app/clipboard/copy/: basic.rs  cards.rs  formats.rs  mod.rs  url.rs
src/app/clipboard/paste/: append.rs  basic.rs  mod.rs  overwrite.rs  text.rs  url.rs
src/config/: colorscheme.rs  mod.rs  rc.rs
src/input/: command_mode.rs  event_loop.rs  insert_mode.rs  mod.rs  mouse.rs  normal_mode.rs  overlay_mode.rs  search_mode.rs
src/ui/: cards.rs  content.rs  edit_overlay.rs  explorer.rs  json_highlight.rs  markdown_highlight.rs  mod.rs  outline.rs  status_bar.rs  utils.rs
tests/: app_tests.rs  card_scroll_tests.rs  cli_options_tests.rs  ordering_tests.rs  overlay_scroll_tests.rs  toon_tests.rs
