[package]
name = "revw"
version = "0.2.7"
edition = "2024"
authors = ["rlelf"]
license = "MIT"
description = "A vim-like TUI for managing notes and resources"
repository = "https://github.com/rlelf/revw"
keywords = ["tui", "json", "viewer", "vim", "ratatui"]
categories = ["command-line-utilities", "text-editors"]
readme = "README.md"
exclude = [".github/", "assets/", "CHANGELOG.md"]

[[bin]]
name = "revw"
path = "src/main.rs"

[lib]
name = "revw"
path = "src/lib.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
anyhow = "1.0"
arboard = "3.4"
notify = "8.2"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
unicode-width = "0.2.0"
dirs = "6.0.0"
printpdf = "0.8.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
